Fix aligning of glyphicons in buttons (#63)

--- a/sass/_bootstrap-override.scss
+++ b/sass/_bootstrap-override.scss
@@ -664,6 +664,12 @@ legend {
 // Buttons
 // --------------------------------------------------
 
+.btn {
+  .glyphicon {
+    top: 3px;
+  }
+}
+
 .btn-rounded{
   @include border-radius(6px);
 }
